syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.tanle.tland.payment_service.grpc";
option java_outer_classname = "PaymentProto";


service PaymentService {
  rpc getPaymentUrl(PaymentUrlRequest) returns (PaymentUrlResponse);
}


message PaymentUrlRequest {
  string txnRef = 1;
  int64  amount = 2;
  string ipAddress = 3;
  string purposeType = 4;
  string  transactionType = 5;
}


message PaymentUrlResponse {
  string vnpUrl = 1;
}
